Changed width of input button, choose file no longer cut off

--- a/emulator.css
+++ b/emulator.css
@@ -154,7 +154,7 @@ button:hover {
 /* INPUT */
 /* ----------------------------------------------------------- */
 input[type="file"] {
-	width: 74px;
+	width: 124px;
 }
 
 input[type="color"] {
